squirrel-services/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: squirrel
  labels:
    name: squirrel
    environment: production
